--- a/MainService/src/main/resources/application.properties
+++ b/MainService/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 server.port=8080
 spring.application.name=main-service
-spring.data.mongodb.uri=mongodb://mongodb:27017/sample
-spring.datasource.url=jdbc:mysql://mysql:3306/bookstore
+#spring.data.mongodb.uri=mongodb://mongodb:27017/sample
+#spring.datasource.url=jdbc:mysql://mysql:3306/bookstore
+spring.data.mongodb.uri=mongodb://localhost:27017/sample
+spring.datasource.url=jdbc:mysql://localhost:3306/bookstore
 spring.datasource.username=root
 spring.datasource.password=qyl728728
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
